Fix critical bugs: Assert.java logic error, NPE in validators, SSL default, resource leaks, thread safety, and enable JUnit 4 test execution
- Fix Assert.java: assertNull -> assertNotNull in assertInstanceOf/assertAssignable (lines 516, 550, 571)
- Fix CollectionCharLengthValidator: add null check to prevent NPE on null collection elements
- Fix MapCharLengthValidator: add null check to prevent NPE on null map values
- Fix HttpUrlConnectionSender: change SSL trust-all default from true to false
- Fix HttpUrlConnectionSender: close error/input streams with try-with-resources
- Fix EditorContentLengthValidator: filter null values in stream to prevent NPE
- Fix PasswordValidator: wrap SPECIAL_CHARS in Collections.unmodifiableSet for thread safety
- Add junit-vintage-engine to spec and validator to enable JUnit 4 tests on JUnit 5 platform
- Add CollectionCharLengthTest and MapCharLengthTest for null-safety validation

Co-authored-by: CoderBoyBoy <11583532+CoderBoyBoy@users.noreply.github.com>
Agent-Logs-Url: https://github.com/xcancloud/AngusInfra/sessions/9941e040-4b46-4e78-9a7f-70a79e40a755